--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres?useUnicode=true&characterEncoding=UTF8
+    url: jdbc:postgresql://localhost:5432/geekbrains?useUnicode=true&characterEncoding=UTF8
     username: postgres
-    password: root
+    password: postgres
   jpa:
     show-sql: true
   thymeleaf:
