--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,15 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.3.RELEASE'
+	id 'org.springframework.boot' version '2.2.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+	id 'com.google.cloud.tools.jib' version '1.8.0'
+	id 'no.nils.wsdl2java' version '0.12'
 }
+
+apply plugin: 'no.nils.wsdl2java'
+apply plugin: 'com.google.cloud.tools.jib'
+
+apply from: 'gradle/jib.gradle'
 
 group = 'ru.geekbrains.shop'
 version = '0.0.1'
@@ -27,6 +34,7 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-security")
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
 	implementation("org.springframework.boot:spring-boot-starter-undertow")
+	implementation("org.springframework.boot:spring-boot-starter-amqp")
 	implementation("org.springframework.boot:spring-boot-starter-web")
 
 	implementation("org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE")
@@ -36,4 +44,18 @@ dependencies {
 
 	annotationProcessor("org.projectlombok:lombok")
 
+	/**
+	 * SOAP
+	 */
+	implementation("com.sun.xml.ws:rt:2.3.1")
+	implementation("org.glassfish.jaxb:jaxb-runtime:2.3.2")
+	implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
+
+}
+
+wsdl2java{
+	wsdlDir=file("${projectDir}/src/main/resources/META-INF/wsdl/")
+	wsdlsToGenerate = [
+		[ '-wsdlLocation', 'classpath:META-INF/wsdl/payment/WsPayment.wsdl', file("${projectDir}/src/main/resources/META-INF/wsdl/payment/WsPayment.wsdl") ]
+	]
 }
